# poetry-example

./: Makefile  Readme.md  pyproject.toml
shell_scripts/: install_poetry.sh  install_pyenv.sh
src/: helpers.py  main.py
tests/: test_helpers.py  tests_helpers.py
