[tool.poetry]
name = "src-pbp"
version = "0.1.0"
description = ""
authors = ["david-fortini-por <d.fortini@portofrotterdam.com>"]


[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.3"
pandas = "*"
scikit-learn = "==0.22.2"
flake8 = "*"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

